[package]
name = "sstv"
version = "0.1.0"
edition = "2024"

[lib]
name = "sstv_processor"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
image = "0.25"
rand = "0.9"
rand_distr = "0.5"
rsstv = "0.2"
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
tokio = { version = "1.0", features = ["full"] }
rfd = "0.15.3"
hound = "3.5.1"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
